# dagster_university

./: .gitignore  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
dagster_home/: workspace.yaml
dagster_home/.telemetry/: id.yaml
dagster_university_project/: __init__.py
dagster_university_project/assets/: metrics.py  request.py  trips.py
dagster_university_project/jobs/: __init__.py
dagster_university_project/partitions/: __init__.py
dagster_university_project/schedules/: __init__.py
dagster_university_project/sensors/: __init__.py
data/outputs/: trips_by_week.csv
data/requests/: january-staten-island.json
data/staging/: manhattan_stats.geojson
