[tool.poetry]
name = "dagster-university-project"
version = "0.1.0"
description = ""
authors = ["seanpden <seanden522@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
dagster = "^1.7.0"
dagster-webserver = "^1.7.0"
duckdb = "^0.10.1"
plotly = "^5.20.0"
geopandas = "^0.14.3"
kaleido = "0.2.1"
dagster-duckdb = "^0.23.0"

[tool.dagster]
module_name = "dagster_university_project"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
